Fixing bug 120150. Now the plotting widget doesn't show unknown values as valid values. No string changes, but for KDE 4.3 the handbook should tell the user about this.

Patch by Kashyap Puranik and Vinayi Hegde. Thanks!

BUG:120150

svn path=/trunk/KDE/kdeedu/kalzium/; revision=899243